# PythonLessons

./: README.md
Conversions/: pyproject.toml
Conversions/Sample/: nutrition.json
Conversions/conversions/: __init__.py
Conversions/tests/: test_conversions.py
Hangman/: pyproject.toml
Hangman/hangman/: hangman.py
Hangman/tests/: test_hangman.py
