[tool.poetry]
name = "Hangman"
version = "0.1.0"
description = "First Python learning project"
authors = ["Bradley Geilfuss <bgeilfuss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
